# soundcheck

./: .gitignore  CASE_STUDY.md  DEPLOY.md  PLAN.md  README.md  action.yml  candidate.json  live-report.html  pyproject.toml  regression-report.html  render.yaml  report.html  requirements.txt
.github/workflows/: ci.yml
baselines/: appointment_booking.json  bilingual_caller.json  hesitant_caller.json  impatient_refund.json
dashboard/: next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
dashboard/src/: middleware.ts
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/app/dashboard/: page.tsx
dashboard/src/app/login/: page.tsx
dashboard/src/app/runs/[id]/: page.tsx
dashboard/src/app/settings/: page.tsx
dashboard/src/components/: ClerkTokenBridge.tsx  Dashboard.tsx  Header.tsx  RunDetail.tsx  RunLauncher.tsx  SettingsPanel.tsx  StatusPill.tsx  TrendChart.tsx
dashboard/src/lib/: api.ts  auth.tsx
examples/: live_appointment_booking.json  live_audio_metrics.json  live_impatient_refund.json  live_parallel_suite.json
personas/: appointment_booking.yaml  bilingual_caller.yaml  hesitant_caller.yaml  impatient_refund.yaml
report-ui/: index.html  package-lock.json  package.json  vite.config.ts
report-ui/scripts/: sync-template.mjs
report-ui/src/: App.tsx  delta.ts  demo.ts  index.css  types.ts
server/: __init__.py  app.py  auth.py  clerk_auth.py  store.py
soundcheck/: __init__.py  audio.py  cli.py  gate.py  judge.py  metrics.py  personas.py  report.py  runner.py  session.py  suite.py
soundcheck.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
soundcheck/assets/: report_template.html
tests/: test_api.py  test_audio.py  test_auth.py  test_behaviors.py  test_html_report.py  test_interruption.py  test_judge.py  test_latency_bias.py  test_live_transport.py  test_pipeline.py  test_report.py  test_suite.py
