[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "soundcheck"
version = "0.2.0"
description = "CI-native reliability gate for voice agents: simulated callers, latency/interruption metrics, and a regression gate that fails your build."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Ricky Vishwakarma" }]
keywords = ["voice-agents", "testing", "ci", "elevenlabs", "reliability", "evals"]
dependencies = ["pyyaml>=6.0"]

[project.optional-dependencies]
live = ["websocket-client>=1.7"]
judge = ["anthropic>=0.116"]
dev = ["pytest>=8.0", "httpx>=0.27"]
server = ["fastapi>=0.115", "uvicorn[standard]>=0.30", "websocket-client>=1.7"]

[project.scripts]
soundcheck = "soundcheck.cli:main"

[project.urls]
Repository = "https://github.com/RickyVishwakarma/soundcheck"

[tool.setuptools]
# `server` ships with the distribution too — leaving it out meant it was only
# importable when CWD happened to be on sys.path (i.e. `python -m pytest`, but
# not the bare `pytest` CI runs).
packages = ["soundcheck", "server"]

[tool.setuptools.package-data]
soundcheck = ["assets/*.html"]
